--- a/fico-s4apps01/paidpay/webapp/view/Main.view.xml
+++ b/fico-s4apps01/paidpay/webapp/view/Main.view.xml
@@ -33,7 +33,7 @@
                         </OverflowToolbar>
                     </table:extension>
                     <table:columns>
-                        <table:Column autoResizable="true" width="6rem" label="{i18n>Status}">
+                        <table:Column width="6rem" label="{i18n>Status}">
                             <table:template>
                                 <!-- <ObjectStatus state="{ path:'local>Status',formatter:'.formatter.formatState' }" icon="sap-icon://status-positive"/> -->
                             </table:template>
