--- a/sd-s4apps01/creditmantablen/webapp/view/Main.view.xml
+++ b/sd-s4apps01/creditmantablen/webapp/view/Main.view.xml
@@ -6,29 +6,23 @@
     xmlns:f="sap.f"
     xmlns:smartFilterBar="sap.ui.comp.smartfilterbar"
     xmlns:sv="sap.ui.comp.smartvariants">
-
     <f:DynamicPage headerExpanded="true">
         <f:title>
             <f:DynamicPageTitle>
                 <f:heading>
-                    <sv:SmartVariantManagement id="__SVM01" persistencyKey="creditmantable" showShare="true" showExecuteOnSelection="true" entitySet=""/>
+                    <sv:SmartVariantManagement id="__SVM01" persistencyKey="creditmantableSVM" showShare="true" showExecuteOnSelection="true" entitySet="CREDITMANTABLE"/>
                 </f:heading>
             </f:DynamicPageTitle>
         </f:title>
         <f:header>
             <f:DynamicPageHeader pinnable="true">
-
                 <f:content>
                     <FlexBox fitContainer="true">
-        
-                        <smartFilterBar:SmartFilterBar id="idSmartFilterBar1" entitySet="CREDITMANTABLE" useToolbar="false" smartVariant="__SVM01" persistencyKey="creditmantable" visible="true" search="onSearch">
+                        <smartFilterBar:SmartFilterBar id="idSmartFilterBar1" entitySet="CREDITMANTABLE" useToolbar="false" smartVariant="__SVM01" persistencyKey="creditmantableSFB" visible="true" search="onSearch">
                             <smartFilterBar:controlConfiguration>
-                                <!-- <smartFilterBar:ControlConfiguration index='10' key="SalesOrganization" mandatory="mandatory" filterType="single" controlType="dropDownList" displayBehaviour="descriptionAndId" visibleInAdvancedArea="true" label="{i18n>SalesOrganization}"/> -->
-                                <!-- <smartFilterBar:ControlConfiguration index='10' key="SalesOrganization" filterType="single" controlType="dropDownList" displayBehaviour="descriptionAndId" visibleInAdvancedArea="true" label="{i18n>SalesOrganization}"/> -->
-                                <smartFilterBar:ControlConfiguration index='10' key="SalesOrganization" filterType="single" displayBehaviour="descriptionAndId" visibleInAdvancedArea="true" label="{i18n>SalesOrganization}"/>
+                                <smartFilterBar:ControlConfiguration index='10' key="SalesOrganization" controlType="dropDownList" displayBehaviour="idAndDescription" visibleInAdvancedArea="true" label="{i18n>SalesOrganization}"/>
                                 <smartFilterBar:ControlConfiguration index='20' key="Customer" visibleInAdvancedArea="true" label="{i18n>Customer}"/>
-                                <smartFilterBar:ControlConfiguration index='30' key="zyear" visibleInAdvancedArea="true" label="{i18n>zyear}"/>
-                                <!-- <smartFilterBar:ControlConfiguration index='30' key="zyear" label="{i18n>zyear}" visibleInAdvancedArea="true">
+                                <smartFilterBar:ControlConfiguration index='30' key="zyear" label="{i18n>zyear}" visibleInAdvancedArea="true">
                                     <smartFilterBar:customControl>
                                         <DatePicker valueFormat="yyyy" displayFormat="yyyy" value="{
                                             'path':'local>/dateValue',
@@ -38,52 +32,54 @@
                                             }
                                         }"/>
                                     </smartFilterBar:customControl>
-                                </smartFilterBar:ControlConfiguration> -->
-
+                                </smartFilterBar:ControlConfiguration>
                                 <!-- visible -->
-                                <smartFilterBar:ControlConfiguration index='999' key="Customer"/>
-                                <!-- <smartFilterBar:ControlConfiguration index='999' key="MaterialName" visible="false"/>
-                                <smartFilterBar:ControlConfiguration index='999' key="StorageLocationToName" visible="false"/>
-                                <smartFilterBar:ControlConfiguration index='999' key="TotalRequiredQuantity" visible="false"/>
-                                <smartFilterBar:ControlConfiguration index='999' key="TotalShortFallQuantity" visible="false"/>
-                                <smartFilterBar:ControlConfiguration index='999' key="StorageLocationToStock" visible="false"/>
-                                <smartFilterBar:ControlConfiguration index='999' key="M_CARD_Quantity" visible="false"/>
-                                <smartFilterBar:ControlConfiguration index='999' key="BaseUnit" visible="false"/>
-                                <smartFilterBar:ControlConfiguration index='999' key="TotalTransferQuantity" visible="false"/>
-                                <smartFilterBar:ControlConfiguration index='999' key="StorageLocationFromName" visible="false"/>
-                                <smartFilterBar:ControlConfiguration index='999' key="StorageLocationFromStock" visible="false"/>
-                                <smartFilterBar:ControlConfiguration index='999' key="GR_SlipsQuantity" visible="false"/>
-                                <smartFilterBar:ControlConfiguration index='999' key="M_CARD" visible="false"/>
-                                <smartFilterBar:ControlConfiguration index='999' key="LaboratoryOrDesignOfficeName" visible="false"/>
-                                <smartFilterBar:ControlConfiguration index='999' key="DetailsJson" visible="false"/> -->
+                                <smartFilterBar:ControlConfiguration index='999' key="RowNo" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="CustomerName" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="LimitAmount" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="Terms1" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="Termstext1" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="Termstext2" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="text1" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="zmonth1" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="zmonth2" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="zmonth3" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="zmonth4" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="zmonth5" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="zmonth6" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="zmonth7" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="zmonth8" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="zmonth9" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="zmonth10" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="zmonth11" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="zmonth12" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="zymonth1" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="zymonth2" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="zymonth3" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="zymonth4" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="zymonth5" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="zymonth6" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="zymonth7" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="zymonth8" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="zymonth9" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="zymonth10" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="zymonth11" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="zymonth12" visible="false"/>
                             </smartFilterBar:controlConfiguration>
                         </smartFilterBar:SmartFilterBar>
-                   
                     </FlexBox>
                 </f:content>
             </f:DynamicPageHeader>
         </f:header>
-
-        <!-- <f:content>
-            <FlexBox fitContainer="true">
-                <core:Fragment fragmentName="sd.creditmantablen.fragments.CreditmanList" type="XML"/>
-            </FlexBox>
-        </f:content> -->
-
-		<f:content>
-			<table:Table rows="{path:'local>/data'}" id="tablelist" visibleRowCountMode="Auto" rowsUpdated="onUITableRowsUpdated" 
-            selectionMode="None">
-
-            <!-- fixedColumnCount="6" -->
-				<table:toolbar>
-					<!-- <OverflowToolbar>
-						<ToolbarSpacer></ToolbarSpacer>
-						<Button icon="sap-icon://excel-attachment" press="onDataExport" />
-					</OverflowToolbar> -->
-				</table:toolbar>
-			</table:Table>
-
-		</f:content>
-
+        <f:content>
+            <table:Table id="tablelist" rows="{local>/data}" rowMode="Auto" visible="{= ${local>/data}.length > 0}" rowsUpdated="onUITableRowsUpdated" selectionMode="None">
+                <table:extension>
+                    <OverflowToolbar style="Clear">
+                        <Title text="{i18n>Results}"/>
+                        <ToolbarSpacer></ToolbarSpacer>
+                    </OverflowToolbar>
+                </table:extension>
+            </table:Table>
+        </f:content>
     </f:DynamicPage>
 </mvc:View> 
