PP‐016_ピッキングリスト作成

--- a/pp-s4apps01/zpickinglist/webapp/view/Main.view.xml
+++ b/pp-s4apps01/zpickinglist/webapp/view/Main.view.xml
@@ -44,7 +44,7 @@
                                 <smartFilterBar:ControlConfiguration index='60' key="ProductionSupervisor" visibleInAdvancedArea="true" label="{i18n>ProductionSupervisor}"/>
                                 <smartFilterBar:ControlConfiguration index='70' key="MaterialGroup" visibleInAdvancedArea="true" label="{i18n>MaterialGroup}"/>
                                 <smartFilterBar:ControlConfiguration index='80' key="LaboratoryOrDesignOffice" visibleInAdvancedArea="true" label="{i18n>LaboratoryOrDesignOffice}"/>
-                                <smartFilterBar:ControlConfiguration index='90' key="ExternalProductGroup" visibleInAdvancedArea="true" label="{i18n>ExternalProductGroup}"/>
+                                <smartFilterBar:ControlConfiguration index='90' key="ExternalProductGroup" visibleInAdvancedArea="true" label="{i18n>ExternalProductGroup}" visible="false"/>
                                 <smartFilterBar:ControlConfiguration index='100' key="SizeOrDimensionText" visibleInAdvancedArea="true" label="{i18n>SizeOrDimensionText}"/>
                                 <!-- visible -->
                                 <smartFilterBar:ControlConfiguration index='999' key="RowNo" visible="false"/>
@@ -72,7 +72,7 @@
                                 <smartFilterBar:ControlConfiguration index='40' key="StorageLocationFrom" displayBehaviour="descriptionAndId" visibleInAdvancedArea="true" label="{i18n>LocationFrom}"/>
                                 <smartFilterBar:ControlConfiguration index='70' key="MaterialGroup" visibleInAdvancedArea="true" label="{i18n>MaterialGroup}"/>
                                 <smartFilterBar:ControlConfiguration index='80' key="LaboratoryOrDesignOffice" visibleInAdvancedArea="true" label="{i18n>LaboratoryOrDesignOffice}"/>
-                                <smartFilterBar:ControlConfiguration index='90' key="ExternalProductGroup" visibleInAdvancedArea="true" label="{i18n>ExternalProductGroup}"/>
+                                <smartFilterBar:ControlConfiguration index='90' key="ExternalProductGroup" visibleInAdvancedArea="true" label="{i18n>ExternalProductGroup}" visible="false"/>
                                 <smartFilterBar:ControlConfiguration index='100' key="Reservation" visibleInAdvancedArea="true" label="{i18n>Reservation}"/>
                                 <smartFilterBar:ControlConfiguration index='110' key="CreatedDate" visibleInAdvancedArea="true" label="{i18n>CreatedDate}"/>
                                 <smartFilterBar:ControlConfiguration index='120' key="CreatedByUser" visibleInAdvancedArea="true" label="{i18n>CreatedByUser}"/>
