--- a/pp-s4apps01/ofsocomparison/webapp/view/Main.view.xml
+++ b/pp-s4apps01/ofsocomparison/webapp/view/Main.view.xml
@@ -1,7 +1,110 @@
-<mvc:View controllerName="pp.ofsocomparison.controller.Main"
+<!-- <mvc:View controllerName="pp.ofsocomparison.controller.Main"
     xmlns:mvc="sap.ui.core.mvc" displayBlock="true"
     xmlns="sap.m">
     <Page id="page" title="{i18n>title}">
         <content />
     </Page>
-</mvc:View>
+</mvc:View> -->
+
+<mvc:View controllerName="pp.ofsocomparison.controller.Main" displayBlock="true"
+    xmlns:table="sap.ui.table"
+    xmlns:mvc="sap.ui.core.mvc"
+    xmlns:core="sap.ui.core"
+    xmlns="sap.m"
+    xmlns:f="sap.f"
+    xmlns:smartFilterBar="sap.ui.comp.smartfilterbar"
+    xmlns:sv="sap.ui.comp.smartvariants">
+    <f:DynamicPage headerExpanded="true">
+        <f:title>
+            <f:DynamicPageTitle>
+                <f:heading>
+                    <sv:SmartVariantManagement id="__SVM01" persistencyKey="OFSOCOMPARISONSVM" showShare="true" showExecuteOnSelection="true" entitySet="OFSOCOMPARISON"/>
+                </f:heading>
+            </f:DynamicPageTitle>
+        </f:title>
+        <f:header>
+            <f:DynamicPageHeader pinnable="true">
+                <f:content>
+                    <FlexBox fitContainer="true">
+                        <smartFilterBar:SmartFilterBar id="idSmartFilterBar1" entitySet="OFSOCOMPARISON" useToolbar="false" smartVariant="__SVM01" persistencyKey="OFSOCOMPARISONSFB" visible="true" search="onSearch">
+                            <smartFilterBar:controlConfiguration>
+                                <smartFilterBar:ControlConfiguration index='10' key="Plant" displayBehaviour="idAndDescription" visibleInAdvancedArea="true" label="{i18n>Plant}" mandatory="mandatory"/>
+                                <smartFilterBar:ControlConfiguration index='20' key="Customer" displayBehaviour="idAndDescription" visibleInAdvancedArea="true" label="{i18n>Customer}"/>
+                                <smartFilterBar:ControlConfiguration index='30' key="Material" displayBehaviour="idAndDescription" visibleInAdvancedArea="true" label="{i18n>Material}"/>
+                                <smartFilterBar:ControlConfiguration index='40' key="MATERIALBYCUSTOMER" displayBehaviour="idAndDescription" visibleInAdvancedArea="true" label="{i18n>MATERIALBYCUSTOMER}"/>
+                                <!-- <smartFilterBar:ControlConfiguration index='50' key="Duration" displayBehaviour="idAndDescription" visibleInAdvancedArea="true" label="{i18n>Duration}"/> -->
+                                <smartFilterBar:ControlConfiguration index="50" key="Duration" visibleInAdvancedArea="true" label="{i18n>Duration}" visible="true"> 
+                                   <smartFilterBar:customControl> 
+                                    <DateRangeSelection
+                                        id="idDateRangeSelection1"
+                                        valueFormat="yyyy/MM"
+                                        displayFormat="yyyy/MM"
+                                    />
+                                   </smartFilterBar:customControl>
+                                 </smartFilterBar:ControlConfiguration>
+                                <!-- <smartFilterBar:ControlConfiguration index='60' key="CREATED_AT" displayBehaviour="idAndDescription" visibleInAdvancedArea="true" label="{i18n>CREATED_AT}"/> -->
+                                <smartFilterBar:ControlConfiguration index="60" key="CREATED_AT" visibleInAdvancedArea="true" label="{i18n>CREATED_AT}" visible="true"> 
+                                   <smartFilterBar:customControl> 
+                                    <DateRangeSelection
+                                        id="idDateRangeSelection2"
+                                        valueFormat="yyyy/MM/dd"
+                                        displayFormat="yyyy/MM/dd"
+                                    />
+                                   </smartFilterBar:customControl>
+                                 </smartFilterBar:ControlConfiguration>
+                                <smartFilterBar:ControlConfiguration index='70' key="LatestOF" displayBehaviour="idAndDescription" visibleInAdvancedArea="true" label="{i18n>LatestOF}"/>
+                                <smartFilterBar:ControlConfiguration index='80' key="Contents" displayBehaviour="idAndDescription" visibleInAdvancedArea="true" label="{i18n>Contents}"/>
+
+
+
+                                <!-- visible -->
+                                <smartFilterBar:ControlConfiguration index='999' key="RowNo" visible="false"/>
+                                <!-- <smartFilterBar:ControlConfiguration index='999' key="CustomerName" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="LimitAmount" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="Terms1" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="Termstext1" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="Termstext2" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="text1" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="zmonth1" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="zmonth2" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="zmonth3" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="zmonth4" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="zmonth5" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="zmonth6" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="zmonth7" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="zmonth8" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="zmonth9" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="zmonth10" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="zmonth11" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="zmonth12" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="zymonth1" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="zymonth2" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="zymonth3" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="zymonth4" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="zymonth5" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="zymonth6" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="zymonth7" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="zymonth8" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="zymonth9" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="zymonth10" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="zymonth11" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="zymonth12" visible="false"/> -->
+                            </smartFilterBar:controlConfiguration>
+                        </smartFilterBar:SmartFilterBar>
+                    </FlexBox>
+                </f:content>
+            </f:DynamicPageHeader>
+        </f:header>
+        <f:content>
+            <table:Table id="tablelist" rows="{local>/data}" rowMode="Auto" visible="{= ${local>/data}.length > 0}" rowsUpdated="onUITableRowsUpdated" selectionMode="None">
+                <table:extension>
+                    <OverflowToolbar style="Clear">
+                        <Title text="{i18n>Results}"/>
+                        <ToolbarSpacer></ToolbarSpacer>
+                    </OverflowToolbar>
+                </table:extension>
+            </table:Table>
+        </f:content>
+    </f:DynamicPage>
+</mvc:View> 
+
