PP-011 OFとSO比較照会

--- a/pp-s4apps01/ofsocomparison/webapp/view/Main.view.xml
+++ b/pp-s4apps01/ofsocomparison/webapp/view/Main.view.xml
@@ -67,36 +67,49 @@
 
                                 <!-- visible -->
                                 <smartFilterBar:ControlConfiguration index='999' key="RowNo" visible="false"/>
-                                <!-- <smartFilterBar:ControlConfiguration index='999' key="CustomerName" visible="false"/>
-                                <smartFilterBar:ControlConfiguration index='999' key="LimitAmount" visible="false"/>
-                                <smartFilterBar:ControlConfiguration index='999' key="Terms1" visible="false"/>
-                                <smartFilterBar:ControlConfiguration index='999' key="Termstext1" visible="false"/>
-                                <smartFilterBar:ControlConfiguration index='999' key="Termstext2" visible="false"/>
-                                <smartFilterBar:ControlConfiguration index='999' key="text1" visible="false"/>
-                                <smartFilterBar:ControlConfiguration index='999' key="zmonth1" visible="false"/>
-                                <smartFilterBar:ControlConfiguration index='999' key="zmonth2" visible="false"/>
-                                <smartFilterBar:ControlConfiguration index='999' key="zmonth3" visible="false"/>
-                                <smartFilterBar:ControlConfiguration index='999' key="zmonth4" visible="false"/>
-                                <smartFilterBar:ControlConfiguration index='999' key="zmonth5" visible="false"/>
-                                <smartFilterBar:ControlConfiguration index='999' key="zmonth6" visible="false"/>
-                                <smartFilterBar:ControlConfiguration index='999' key="zmonth7" visible="false"/>
-                                <smartFilterBar:ControlConfiguration index='999' key="zmonth8" visible="false"/>
-                                <smartFilterBar:ControlConfiguration index='999' key="zmonth9" visible="false"/>
-                                <smartFilterBar:ControlConfiguration index='999' key="zmonth10" visible="false"/>
-                                <smartFilterBar:ControlConfiguration index='999' key="zmonth11" visible="false"/>
-                                <smartFilterBar:ControlConfiguration index='999' key="zmonth12" visible="false"/>
-                                <smartFilterBar:ControlConfiguration index='999' key="zymonth1" visible="false"/>
-                                <smartFilterBar:ControlConfiguration index='999' key="zymonth2" visible="false"/>
-                                <smartFilterBar:ControlConfiguration index='999' key="zymonth3" visible="false"/>
-                                <smartFilterBar:ControlConfiguration index='999' key="zymonth4" visible="false"/>
-                                <smartFilterBar:ControlConfiguration index='999' key="zymonth5" visible="false"/>
-                                <smartFilterBar:ControlConfiguration index='999' key="zymonth6" visible="false"/>
-                                <smartFilterBar:ControlConfiguration index='999' key="zymonth7" visible="false"/>
-                                <smartFilterBar:ControlConfiguration index='999' key="zymonth8" visible="false"/>
-                                <smartFilterBar:ControlConfiguration index='999' key="zymonth9" visible="false"/>
-                                <smartFilterBar:ControlConfiguration index='999' key="zymonth10" visible="false"/>
-                                <smartFilterBar:ControlConfiguration index='999' key="zymonth11" visible="false"/>
-                                <smartFilterBar:ControlConfiguration index='999' key="zymonth12" visible="false"/> -->
+                                <smartFilterBar:ControlConfiguration index='999' key="Plant" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="Customer" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="Material" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="MaterialName" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="MATERIALBYCUSTOMER" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="CREATED_AT" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="Period1" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="Period2" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="Period3" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="Period4" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="Period5" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="Period6" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="Period7" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="Period8" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="Period9" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="Period10" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="Period11" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="Period12" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="Period13" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="Period14" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="Period15" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="Period16" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="Period17" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="Period18" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="Period19" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="Period20" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="Period21" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="Period22" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="Period23" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="Period24" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="Period25" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="Period26" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="Period27" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="Period28" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="Period29" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="Period30" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="Period31" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="Period32" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="Period33" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="Period34" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="Period35" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="Period36" visible="false"/>
+
                             </smartFilterBar:controlConfiguration>
                         </smartFilterBar:SmartFilterBar>
                     </FlexBox>
