SD026 受注管理レポート 20241029

--- a/sd-s4apps01/zsalesdocumentlist/webapp/view/Main.view.xml
+++ b/sd-s4apps01/zsalesdocumentlist/webapp/view/Main.view.xml
@@ -89,22 +89,30 @@
                                 <smartFilterBar:ControlConfiguration index='999' key="PriceDetnExchangeRate" visible="false"/>
                                 <smartFilterBar:ControlConfiguration index='999' key="ExchangeRateDate" visible="false"/>
                                 <smartFilterBar:ControlConfiguration index='999' key="ConditionRateValuePPR0" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="ConditionCurrencyPPR0" visible="false"/>
                                 <smartFilterBar:ControlConfiguration index='999' key="ConditionAmountPPR0" visible="false"/>
                                 <smartFilterBar:ControlConfiguration index='999' key="ConditionRateValueTTX1" visible="false"/>
                                 <smartFilterBar:ControlConfiguration index='999' key="ConditionAmountTTX1" visible="false"/>
                                 <smartFilterBar:ControlConfiguration index='999' key="ConditionRateValueZPFC" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="ConditionCurrencyZPFC" visible="false"/>
                                 <smartFilterBar:ControlConfiguration index='999' key="ConditionAmountZPFC" visible="false"/>
                                 <smartFilterBar:ControlConfiguration index='999' key="ConditionRateValueZPST" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="ConditionCurrencyZPST" visible="false"/>
                                 <smartFilterBar:ControlConfiguration index='999' key="ConditionAmountZPST" visible="false"/>
                                 <smartFilterBar:ControlConfiguration index='999' key="ConditionRateValueZPIN" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="ConditionCurrencyZPIN" visible="false"/>      
                                 <smartFilterBar:ControlConfiguration index='999' key="ConditionAmountZPIN" visible="false"/>
                                 <smartFilterBar:ControlConfiguration index='999' key="ConditionRateValueZPSB" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="ConditionCurrencyZPSB" visible="false"/>
                                 <smartFilterBar:ControlConfiguration index='999' key="ConditionAmountZPSB" visible="false"/>
                                 <smartFilterBar:ControlConfiguration index='999' key="ConditionRateValueZPSS" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="ConditionCurrencyZPSS" visible="false"/>
                                 <smartFilterBar:ControlConfiguration index='999' key="ConditionAmountZPSS" visible="false"/>
                                 <smartFilterBar:ControlConfiguration index='999' key="ConditionRateValueZPCM" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="ConditionCurrencyZPCM" visible="false"/>
                                 <smartFilterBar:ControlConfiguration index='999' key="ConditionAmountZPCM" visible="false"/>
                                 <smartFilterBar:ControlConfiguration index='999' key="ConditionRateValueZPGP" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="ConditionCurrencyZPGP" visible="false"/> 
                                 <smartFilterBar:ControlConfiguration index='999' key="ConditionAmountZPGP" visible="false"/>
                                 <smartFilterBar:ControlConfiguration index='999' key="YY1_ItemRemarks_1_SDI" visible="false"/>
                                 <smartFilterBar:ControlConfiguration index='999' key="DeliveredQtyInOrderQtyUnit" visible="false"/>
